force-app/main/default/objects/Route_Schedule__c/Route_Schedule__c.object-meta.xml
<CustomObject>
    <label>Route Schedule</label>
    <nameField>
        <displayFormat>RS-{00000000}</displayFormat>
        <label>Route Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route_Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>