force-app/main/default/objects/Route_Schedule__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Drivers__c</referenceTo>
    <relationshipLabel>Route_Schedules</relationshipLabel>
    <relationshipName>Route_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>