force-app/main/default/objects/Route_Schedule__c/fields/drivers__c.field-meta.xml
<CustomField>
    <fullName>drivers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Route_Schedules</relationshipLabel>
    <relationshipName>Route_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>