force-app/main/default/objects/Route_Schedule__c/fields/Route_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Route_Start_Time__c</fullName>
    <label>Route Start Time</label>
    <type>Time</type>
</CustomField>