force-app/main/default/objects/Route_Schedule__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Route_Schedules</relationshipLabel>
    <relationshipName>Route_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>