force-app/main/default/objects/Route_Schedule__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicles__c</referenceTo>
    <relationshipLabel>Route_Schedules</relationshipLabel>
    <relationshipName>Route_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>