force-app/main/default/objects/Route_Schedule__c/fields/VehicleId__c.field-meta.xml
<CustomField>
    <fullName>VehicleId__c</fullName>
    <label>VehicleId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>