force-app/main/default/objects/Route_Schedule__c/listViews/Route.listView-meta.xml
<ListView>
    <fullName>Route</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Route</label>
</ListView>