force-app/main/default/objects/Route_Schedule__c/listViews/Routes.listView-meta.xml
<ListView>
    <fullName>Routes</fullName>
    <columns>NAME</columns>
    <columns>Route_Date__c</columns>
    <columns>VehicleId__c</columns>
    <columns>Site__c</columns>
    <columns>Route_Start_Time__c</columns>
    <columns>Route_End_Time__c</columns>
    <filterScope>Mine</filterScope>
    <label>Routes</label>
</ListView>